# wasm-evt-listener-rs

./: Cargo.toml  README.md
.github/: semantic.yml
.github/workflows/: release-crate.yml  release.yml  test.yml  unit-test.yml
src/: attached.rs  builder.rs  lib.rs  listener.rs  stream.rs
tests/: browser.rs  dedicated_worker.rs  shared_worker.rs  worker.rs
tests/tests/: mod.rs  util.rs
